--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,6 +5,7 @@ user:
     pass_min: 8
   format:
     email: !ruby/regexp '/\A[\w+\-.]+@[a-z\d\-]+(\.[a-z\d\-]+)*\.[a-z]+\z/i'
+  index_page: 15
 users_helper:
   size_img: 50
 product:
@@ -14,3 +15,5 @@ product:
 cart_item:
   validation:
     greater: 0
+reset_pass:
+  expired: 2
